--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1409,6 +1409,10 @@ a {
     color: #337ab7;
     text-decoration: none
 }
+.navbar-nav li a:hover{
+    color: #F3976C !important;
+    
+}
 
 a:focus,
 a:hover {
@@ -1435,7 +1439,6 @@ img {
 .img-responsive,
 .thumbnail a>img,
 .thumbnail>img {
-    display: block;
     max-width: 100%;
     height: auto
 }
@@ -1593,22 +1596,22 @@ h6 small {
 
 .h1,
 h1 {
-    font-size: 36px
+    font-size: 20px
 }
 
 .h2,
 h2 {
-    font-size: 30px
+    font-size: 21px
 }
 
 .h3,
 h3 {
-    font-size: 24px
+    font-size: 18px
 }
 
 .h4,
 h4 {
-    font-size: 18px
+    font-size: 16px
 }
 
 .h5,
@@ -1622,7 +1625,7 @@ h6 {
 }
 
 p {
-    margin: 0 0 10px
+    margin: 0 0 10px;
 }
 
 .lead {
@@ -7682,10 +7685,10 @@ button.close {
     margin: 1px;
     text-indent: -999px;
     cursor: pointer;
-    background-color: #000\9;
+    background-color: #0009;
     background-color: rgba(0, 0, 0, 0);
     border: 1px solid #fff;
-    border-radius: 10px
+    border-radius: 10px;
 }
 
 .carousel-indicators .active {
