--- a/style.css
+++ b/style.css
@@ -264,6 +264,7 @@ a:hover {
     border-color: rgba(0, 0, 0, .3);
 }
 
+
 .voffset {
     margin-top: 30px;
 }
@@ -275,6 +276,7 @@ a:hover {
 .row-no-gutters {
     margin-right: 0;
     margin-left: 0;
+    
 }
 
 .row.row-no-gutters > [class^="col-"],
@@ -286,6 +288,7 @@ a:hover {
 #bloc-1-hero h1 {
     font-size: 32px;
 }
+
 
 .navbar {
     margin-bottom: 0;
@@ -335,6 +338,7 @@ a:hover {
 .nav > li a:hover,
 .nav > li a:focus {
     background: transparent;
+    
 }
 
 .navbar-toggle {
@@ -534,6 +538,8 @@ a[data-lightbox] {
     position: relative;
     display: block;
     text-align: center;
+    display: flex;
+    justify-content: center;
 }
 
 a[data-lightbox]:hover::before {
@@ -574,6 +580,8 @@ a[data-lightbox]:hover img {
 #lightbox-modal .modal-dialog img {
     max-height: 90vh;
     margin: 0 auto;
+    display: flex;
+
 }
 
 .lightbox-caption {
@@ -637,6 +645,7 @@ a[data-lightbox]:hover img {
     padding: 0;
     color: rgba(0, 0, 0, .5);
     background: none;
+    text-align: center;
 }
 
 h1,
@@ -652,6 +661,12 @@ a {
     font-family: "helvetica";
     font-weight: 400;
     color: #575757!important;
+}
+
+.commentaire_entreprise h3 {
+font-weight: lighter !important;
+text-transform: none !important;
+font-size: 0 !important;
 }
 
 .container {
@@ -677,7 +692,7 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 12px;
 }
 
 .tight-width-whitespace {
@@ -701,7 +716,8 @@ p {
 
 .social {
     max-width: 400px;
-    margin: auto auto auto auto;
+    margin: auto;
+   
 }
 
 h2 {
@@ -710,9 +726,9 @@ h2 {
 }
 
 h3 {
-    font-size: 15px;
-    text-transform: uppercase;
-    font-weight: 700;
+    font-size: 17px;
+    font-weight: 500;
+    font-style: italic;
     color: #333333!important;
 }
 
@@ -846,6 +862,7 @@ h4 {
     .nav-center.navbar .nav {
         max-width: 100%
     }
+   
 }
 
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
@@ -894,6 +911,8 @@ h4 {
         overflow-x: hidden;
         position: relative;
     }
+
+
     h1,
     h2,
     h3,
@@ -1033,10 +1052,12 @@ h4 {
         padding-left: 0;
         padding-right: 0;
     }
+
 }
 
 @media (max-width: 767px) {
     .bloc-mob-center-text {
         text-align: center;
     }
+    
 }
