--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5254,7 +5254,8 @@ textarea.input-group-sm>.input-group-btn>.btn {
 .navbar-nav>li>a {
     padding-top: 10px;
     padding-bottom: 10px;
-    line-height: 20px
+    line-height: 20px; 
+    
 }
 
 @media (max-width:767px) {
