--- a/style.css
+++ b/style.css
@@ -90,6 +90,14 @@ a:hover {
     right: 0;
 }
 
+.center-block {
+    display: block !important;
+    margin-right: auto !important;
+    margin-left: auto !important;
+    width: 19% !important;
+}
+
+
 .texture-paper::before {
     background: url("img/texture-paper.png");
     background-size: 280px 280px;
@@ -287,7 +295,7 @@ a:hover {
 }
 
 #bloc-1-hero h1 {
-    font-size: 32px;
+    font-size: 25px;
 }
 
 
@@ -713,8 +721,8 @@ p {
     margin-top: 22px;
     color: #FFFFFF!important;
     text-transform: uppercase;
-    padding: 12px 28px 12px 28px;
-    font-size: 16px;
+    padding: 8px 23px 8px 23px;
+    font-size: 11px;
     font-weight: 700;
 }
 
@@ -852,6 +860,12 @@ h4 {
 
 }
 
+.navbar-nav>li>a {
+    padding-top: 10px !;
+    padding-bottom: 10px !important;
+    line-height: 20px !important; 
+    font-size: 12px !important;
+}
 @media (max-width: 1024px) {
     .bloc {
         padding-left: 20px;
@@ -865,6 +879,7 @@ h4 {
         padding-right: 0;
     }
 }
+
 
 @media (max-width: 992px) and (min-width: 768px) {
     .navbar .nav {
