--- a/style.css
+++ b/style.css
@@ -719,7 +719,7 @@ p {
 
 .cta-hero {
     margin-top: 22px;
-    color: #FFFFFF!important;
+    color: rgb(199, 123, 88)!important;
     text-transform: uppercase;
     padding: 8px 23px 8px 23px;
     font-size: 11px;
