--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ a:hover {
     bottom: 0;
     width: 100%;
     z-index: 100000;
-    background: #FFFFFF url("img/pageload-spinner.gif") no-repeat center center;
+
 }
 
 .bloc {
@@ -37,6 +37,7 @@ a:hover {
     -o-background-size: cover;
     background-size: cover;
     position: relative;
+    font-size: 32px;
 }
 
 .bloc .container {
@@ -179,7 +180,7 @@ a:hover {
     color: rgba(0, 0, 0, .7);
 }
 
-.d-bloc .panel icon {
+.d-bloc .panel  {
     border-color: rgba(0, 0, 0, .7);
 }
 
@@ -308,7 +309,6 @@ a:hover {
     height: auto;
     padding: 3px 15px;
     font-size: 25px;
-    font-weight: normal;
     font-weight: 600;
     line-height: 44px;
 }
@@ -355,7 +355,7 @@ a:hover {
 
 .navbar-toggle {
     margin: 10px 10px 0 0;
-    border: 0px;
+    border: 0;
 }
 
 .navbar-toggle:hover {
@@ -378,46 +378,6 @@ a:hover {
     z-index: 2;
 }
 
-@media (min-width: 768px) {
-    .site-navigation {
-        position: absolute;
-        top: 50%;
-        right: 20px;
-        transform: translate(0, -50%);
-        -webkit-transform: translateY(-50%);
-    }
-    .nav > li .dropdown-menu a,
-    .nav > li .dropdown-menu a:hover {
-        color: #484848;
-    }
-    .nav-invert .site-navigation {
-        left: 0;
-        right: 0;
-    }
-    .nav-center {
-        text-align: center;
-    }
-    .nav-center .navbar-header {
-        width: 100%;
-    }
-    .nav-center .navbar-header,
-    .nav-center .navbar-brand,
-    .nav-center .nav > li {
-        float: none;
-        display: inline-block;
-    }
-    .nav-center .site-navigation {
-        position: relative;
-        width: 100%;
-        right: 0;
-        margin-right: 0px;
-        margin-top: 20px;
-    }
-    .nav-center.mini-nav .navbar-toggle {
-        float: none;
-        margin: 10px auto 0;
-    }
-}
 
 .nav > li > .dropdown a {
     background: none!important;
@@ -443,10 +403,7 @@ nav .caret {
 }
 
 .dropdown-menu .dropdown span {
-    border: 4px solid black;
-    border-top-color: transparent;
-    border-right-color: transparent;
-    border-bottom-color: transparent;
+    border: 4px solid transparent;
     margin: 6px -5px 0 0!important;
     float: right;
 }
@@ -550,13 +507,12 @@ a[data-lightbox] {
     position: relative;
     display: block;
     text-align: center;
-    display: flex;
     justify-content: center;
 }
 
 a[data-lightbox]:hover::before {
     content: "+";
-    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", "Helvetica, Arial", sans-serif;
     font-size: 32px;
     width: 50px;
     height: 50px;
@@ -606,7 +562,7 @@ a[data-lightbox]:hover img {
     bottom: 5px;
 }
 
-.close-lightbox {
+.close-lightbox{
     color: #FFF;
     font-size: 30px;
     position: absolute;
@@ -618,6 +574,7 @@ a[data-lightbox]:hover img {
     line-height: 30px;
     padding: 0 9px 5px;
     opacity: 0.3;
+    display: inline-block
 }
 
 .close-lightbox:hover,
@@ -670,7 +627,7 @@ p,
 label,
 .btn,
 a {
-    font-family: "helvetica";
+    font-family: "helvetica","sans-serif";
     font-weight: 400;
     color: #575757!important;
 }
@@ -714,7 +671,7 @@ p {
 
 .h1 {
     font-size: 20px;
-    font-family: "Open Sans";
+    font-family: "Open Sans", "sans-serif";
 }
 
 .cta-hero {
@@ -747,7 +704,7 @@ h3 {
 .med-width-whitespace {
     max-width: 800px;
     margin: auto auto auto auto;
-    box-shadow: 0px 0px 0px #000000;
+    box-shadow: 0 0 0 #000000;
 }
 
 h1 {
@@ -777,7 +734,7 @@ h4 {
 }
 
 .avatar {
-    box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 4px 9px rgba(0, 0, 0, 0.3);
 }
 
 .black-background {
@@ -794,10 +751,6 @@ h4 {
     background-color: #FFFFFF;
 }
 
-.bgc-dark-slate-blue {
-    background-color: #364577;
-}
-
 .bgc-atomic-tangerine {
     background-color: #F3976C;
 }
@@ -807,8 +760,8 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-    background: #c27956;
-    color: #FFFFFF!important;
+    background: rgb(194, 121, 86);
+    color: rgb(194, 121, 86)!important;
 }
 
 .btn-atomic-tangerine:hover {
@@ -861,11 +814,12 @@ h4 {
 }
 
 .navbar-nav>li>a {
-    padding-top: 10px !;
+    padding-top: 10px ;
     padding-bottom: 10px !important;
     line-height: 20px !important; 
     font-size: 12px !important;
 }
+
 @media (max-width: 1024px) {
     .bloc {
         padding-left: 20px;
@@ -888,6 +842,44 @@ h4 {
     .nav-center.navbar .nav {
         max-width: 100%
     }
+    .site-navigation {
+        position: absolute;
+        top: 50%;
+        right: 20px;
+        transform: translate(0, -50%);
+        -webkit-transform: translateY(-50%);
+    }
+    .nav > li .dropdown-menu a,
+    .nav > li .dropdown-menu a:hover {
+        color: #484848;
+    }
+    .nav-invert .site-navigation {
+        left: 0;
+        right: 0;
+    }
+    .nav-center {
+        text-align: center;
+    }
+    .nav-center .navbar-header {
+        width: 100%;
+    }
+    .nav-center .navbar-header,
+    .nav-center .navbar-brand,
+    .nav-center .nav > li {
+        float: none;
+        display: inline-block;
+    }
+    .nav-center .site-navigation {
+        position: relative;
+        width: 100%;
+        right: 0;
+        margin-right: 0;
+        margin-top: 20px;
+    }
+    .nav-center.mini-nav .navbar-toggle {
+        float: none;
+        margin: 10px auto 0;
+    }
    
 }
 
@@ -907,181 +899,195 @@ h4 {
     .container {
         width: 100%;
     }
+
     .b-parallax {
         background-attachment: scroll;
     }
+
     .page-container,
     #hero-bloc {
         overflow-x: hidden;
         position: relative;
     }
-    .bloc {
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
-    }
+
     .bloc-group,
     .bloc-group .bloc {
         display: block;
         width: 100%;
     }
-    .bloc-fill-screen .fill-bloc-top-edge,
-    .bloc-fill-screen .fill-bloc-bottom-edge {
-        padding: 0 20px;
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
-    }
-}
-
-@media (max-width: 767px) {
-    .page-container {
-        overflow-x: hidden;
-        position: relative;
-    }
 
 
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6,
-    p,
-    #disqus_thread {
-        padding-left: 10px!important;
-        padding-right: 10px!important;
-    }
-    .b-parallax {
-        background-attachment: scroll;
-    }
-    .navbar .nav {
-        padding-top: 0;
-        border-top: 1px solid rgba(0, 0, 0, .2);
-        float: none!important;
-    }
-    .navbar.row {
-        margin-left: 0;
-        margin-right: 0;
-    }
-    .site-navigation {
-        position: inherit;
-        transform: none;
-        -webkit-transform: none;
-        -ms-transform: none;
-    }
-    .nav > li {
-        margin-top: 0;
-        border-bottom: 1px solid rgba(0, 0, 0, .1);
-        background: rgba(0, 0, 0, .05);
-        text-align: left;
-        padding-left: 15px;
-        width: 100%;
-    }
-    .nav > li:hover {
-        background: rgba(0, 0, 0, .08);
-    }
-    .dropdown .dropdown a .caret {
-        float: none;
-        margin: 5px 0 0 10px!important;
-        border: 4px solid black;
-        border-bottom-color: transparent;
-        border-right-color: transparent;
-        border-left-color: transparent;
-    }
-    #hero-bloc .navbar .nav {
-        background: rgba(0, 0, 0, .8);
-    }
-    #hero-bloc .navbar .nav a {
-        color: rgba(255, 255, 255, .6);
-    }
-    .hero {
-        padding: 50px 0;
-    }
-    .hero-nav {
-        left: -1px;
-        right: -1px;
-    }
-    .navbar-collapse {
-        padding: 0;
-        overflow-x: hidden;
-        -webkit-box-shadow: none;
-        box-shadow: none;
-    }
-    .navbar-brand img {
-        max-height: 40px;
-        width: auto;
-    }
-    .nav-invert .navbar-header {
-        float: none;
-        width: 100%;
-    }
-    .nav-invert .navbar-toggle {
-        float: left;
-        margin-left: 10px;
-    }
-    .bloc {
-        padding-left: 0;
-        padding-right: 0;
-    }
-    .bloc-xxl,
-    .bloc-xl,
-    .bloc-lg {
-        padding: 40px 0;
-    }
-    .bloc-sm,
-    .bloc-md {
-        padding-left: 0;
-        padding-right: 0;
-    }
-    .bloc-tile-2 .container,
-    .bloc-tile-3 .container,
-    .bloc-tile-4 .container,
-    .bloc-fill-screen .fill-bloc-top-edge,
-    .bloc-fill-screen .fill-bloc-bottom-edge {
-        padding-left: 0;
-        padding-right: 0;
-    }
-    .a-block {
-        padding: 0 10px;
-    }
-    .btn-dwn {
-        display: none;
-    }
-    .voffset {
-        margin-top: 5px;
-    }
-    .voffset-md {
-        margin-top: 20px;
-    }
-  
-    form {
-        padding: 5px;
-    }
-    .close-lightbox {
-        display: inline-block;
-    }
-    .blocsapp-device-iphone5 {
-        background-size: 216px 425px;
-        padding-top: 60px;
-        width: 216px;
-        height: 425px;
-    }
-    .blocsapp-device-iphone5 img {
-        width: 180px;
-        height: 320px;
-    }
-}
+    @media (max-width: 767px) {
+        .page-container {
+            overflow-x: hidden;
+            position: relative;
+        }
 
-@media (max-width: 400px) {
-    .bloc {
-        padding-left: 0;
-        padding-right: 0;
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6,
+        p,
+        #disqus_thread {
+            padding-left: 10px !important;
+            padding-right: 10px !important;
+        }
+
+        .b-parallax {
+            background-attachment: scroll;
+        }
+
+        .navbar .nav {
+            padding-top: 0;
+            border-top: 1px solid rgba(0, 0, 0, .2);
+            float: none !important;
+        }
+
+        .navbar.row {
+            margin-left: 0;
+            margin-right: 0;
+        }
+
+        .site-navigation {
+            position: inherit;
+            transform: none;
+            -webkit-transform: none;
+            -ms-transform: none;
+        }
+
+        .nav > li {
+            margin-top: 0;
+            border-bottom: 1px solid rgba(0, 0, 0, .1);
+            background: rgba(0, 0, 0, .05);
+            text-align: left;
+            padding-left: 15px;
+            width: 100%;
+        }
+
+        .nav > li:hover {
+            background: rgba(0, 0, 0, .08);
+        }
+
+        .dropdown .dropdown a .caret {
+            float: none;
+            margin: 5px 0 0 10px !important;
+            border: 4px solid transparent;
+        }
+
+        #hero-bloc .navbar .nav {
+            background: rgba(0, 0, 0, .8);
+        }
+
+        #hero-bloc .navbar .nav a {
+            color: rgba(255, 255, 255, .6);
+        }
+
+        .hero {
+            padding: 50px 0;
+        }
+
+        .hero-nav {
+            left: -1px;
+            right: -1px;
+        }
+
+        .navbar-collapse {
+            padding: 0;
+            overflow-x: hidden;
+            -webkit-box-shadow: none;
+            box-shadow: none;
+        }
+
+        .navbar-brand img {
+            max-height: 40px;
+            width: auto;
+        }
+
+        .nav-invert .navbar-header {
+            float: none;
+            width: 100%;
+        }
+
+        .nav-invert .navbar-toggle {
+            float: left;
+            margin-left: 10px;
+        }
+
+        .bloc {
+            padding-left: 0;
+            padding-right: 0;
+        }
+
+        .bloc-xxl,
+        .bloc-xl,
+        .bloc-lg {
+            padding: 40px 0;
+        }
+
+        .bloc-sm,
+        .bloc-md {
+            padding-left: 0;
+            padding-right: 0;
+        }
+
+        .bloc-tile-2 .container,
+        .bloc-tile-3 .container,
+        .bloc-tile-4 .container,
+        .bloc-fill-screen .fill-bloc-top-edge,
+        .bloc-fill-screen .fill-bloc-bottom-edge {
+            padding-left: 0;
+            padding-right: 0;
+        }
+
+        .a-block {
+            padding: 0 10px;
+        }
+
+        .btn-dwn {
+            display: none;
+        }
+
+        .voffset {
+            margin-top: 5px;
+        }
+
+        .voffset-md {
+            margin-top: 20px;
+        }
+
+        form {
+            padding: 5px;
+        }
+
+
+        .blocsapp-device-iphone5 {
+            background-size: 216px 425px;
+            padding-top: 60px;
+            width: 216px;
+            height: 425px;
+        }
+
+        .blocsapp-device-iphone5 img {
+            width: 180px;
+            height: 320px;
+        }
     }
 
-}
+    @media (max-width: 400px) {
+        .bloc {
+            padding-left: 0;
+            padding-right: 0;
+        }
 
-@media (max-width: 767px) {
-    .bloc-mob-center-text {
-        text-align: center;
     }
-    
+
+    @media (max-width: 767px) {
+
+        .bloc-mob-center-text {
+            text-align: center;
+        }
+
+    }
 }
