--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ a:hover {
 .d-bloc h5 a,
 .d-bloc h6 a,
 .d-bloc p a {
-    color: rgba(255, 255, 255, .6);
+    color: rgb(0, 0, 0);
 }
 
 .d-bloc .a-btn:hover,
@@ -721,7 +721,7 @@ h4 {
 }
 
 .white {
-    color: #FFFFFF!important;
+    color: #000000!important;
 }
 
 .portfolio-thumb {
@@ -752,16 +752,16 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: rgb(194, 121, 86);
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: rgb(194, 121, 86)!important;
 }
 
 .btn-atomic-tangerine {
     background: rgb(194, 121, 86);
-    color: rgb(194, 121, 86)!important;
+    color: rgb(0, 0, 0)!important;
 }
 
 .btn-atomic-tangerine:hover {
