projet 4 envoyer, modification des couleur pour avoir un contraste optimale

--- a/style.css
+++ b/style.css
@@ -756,8 +756,8 @@ h4 {
     background-color: rgb(194, 121, 86);
 }
 
-.tc-orange {
-    color: #fb9868!important;
+.tc-black {
+    color: rgb(0, 0, 0) !important;
 }
 
 .btn-atomic-tangerine {
