--- a/style.css
+++ b/style.css
@@ -634,10 +634,11 @@ a {
     color: #000000!important;
 }
 
-.commentaire_entreprise  p{
+.commentaire_entreprise  {
 font-weight: 600 !important;
 text-transform: none !important;
-font-size: 13px!important;
+font-size: 17px!important;
+font-style: italic !important;
 }
 
 .container {
